--- a/blackjack.html
+++ b/blackjack.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="blackjack_script.js"></script>
 </head>
+
 <body>
-    
+    <h1 id="title">Blackjack</h1>
+    <br>
+
+    <p id="text-area">Welcome to Blackjack</p>
+    <button id="new-game-button">New game</button>
+    <button id="hit-button">Hit</button>
+    <button id="stand-button">Stand</button>
+
+    <script src="blackjack_script.js"></script>
 </body>
+
 </html>
