card images loading

--- a/blackjack.html
+++ b/blackjack.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+    div img{
+        width: 80px;
+    }
+    </style>
 </head>
 
 <body>
@@ -13,6 +18,7 @@
     <br>
 
     <p id="text-area">Welcome to Blackjack</p>
+    <div id="img"></div>
     <button id="new-game-button">New game</button>
     <button id="hit-button">Hit</button>
     <button id="stand-button">Stand</button>
