--- a/notes/index.html
+++ b/notes/index.html
@@ -13,9 +13,9 @@
 <body>
     <main>
         <div id="new-note">
-            <p>Title:</p>
+            <p>Tytuł:</p>
             <input type="text" name="new-note-name" id="new-note-name">
-            <p>Content:</p>
+            <p>Treść:</p>
             <textarea name="new-note-content" id="new-note-content" cols="30" rows="10"></textarea>
             <button id="new-note-add">Dodaj notatke</button>
             <div class="note-error hidden">Pola tytuł i treść nie mogą być puste!</div>`
