camera magic filters updates

--- a/cameraMagic/index.html
+++ b/cameraMagic/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Camera fun</title>
     <script src="scripts.js"></script>
-    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <button id="btnPhoto">Capture photo</button>
+    <canvas id="magicCanvas"></canvas>
+    <video id="player"></video>
+    <img src="" alt="" id="photo">
 </body>
 
 </html>
